[add] mocha test base [add] .gitignore [update] package.json for limited dependencies
	new file:   .gitignore
	new file:   engine/metadata/jsdom.js
	modified:   package.json
	new file:   test/metadata-api-test.js
	new file:   test/mocha.opts

--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "test": "./node_modules/mocha/bin/_mocha -u qunit"
+        "test": "node ./node_modules/.bin/mocha"
     },
     "main": "./engine.js",
-    "engines": {"node": ">=0.8.12"},
+    "engines": {"node": ">=0.8.14"},
     "dependencies": {
         "jsdom": "*",
-        "log": "*",
         "iconv": "*",
-        "mongoq": "*",
         "q": "*"
     },
     "devDependencies": {
