add cipher module for agent to sign and verify, refs #40
	new file:   engine/weaver/cipher.js
	modified:   engine/weaver/window.js
	modified:   package.json
	new file:   test/agent-cipher-test.js
	modified:   test/mocha.opts

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dependencies": {
         "jsdom": "*",
         "iconv": "*",
-        "q": "*"
+        "q": "*",
+        "ursa": "*"
     },
     "devDependencies": {
         "mocha": "*"
