[add] Orb storage with MongoDB, refs #44
	modified:   anatta.js
	new file:   engine/orb/mongodb.js
	modified:   package.json
	modified:   test/mocha.opts
	new file:   test/orb-mongodb-test.js

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "jsdom": "*",
         "iconv": "*",
         "q": "*",
-        "ursa": "*"
+        "ursa": "*",
+        "mongodb": "*"
     },
     "devDependencies": {
         "mocha": "*"
