--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "anatta-engine",
-    "version": "0.0.2",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
         "test": "node ./node_modules/.bin/mocha"
     },
     "main": "./anatta",
-    "engines": {"node": ">=0.10.7"},
+    "engines": {"node": ">=5.5"},
     "dependencies": {
         "jsdom": "*",
         "iconv": "*",
         "q": "*",
-        "ursa": "*",
+        "node-forge": "*",
         "mongodb": "*"
     },
     "devDependencies": {
