--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "engines": {"node": ">=5.5"},
     "dependencies": {
         "jsdom": "*",
+        "xmldom": "*",
+        "nwmatcher": "*",
         "iconv": "*",
         "q": "*",
         "node-forge": "*",
