[update] replace native iconv to purejs iconv-lite

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "jsdom": "*",
         "xmldom": "*",
         "nwmatcher": "*",
-        "iconv": "*",
+        "iconv-lite": "*",
         "node-forge": "*",
         "mongodb": "*"
     },
