--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "anatta-engine",
-    "version": "0.4.2",
+    "version": "0.4.3",
     "private": true,
     "scripts": {
-        "test": "node ./node_modules/.bin/mocha"
+        "eslint": "eslint .",
+        "test": "mocha"
     },
     "main": "./anatta",
     "engines": {"node": ">=6"},
@@ -16,6 +17,7 @@
         "mongodb": "*"
     },
     "devDependencies": {
+        "eslint": "*",
         "mocha": "*"
     },
     "repository": {
