--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "anatta-engine",
-  "version": "0.4.5",
-  "private": true,
-  "scripts": {
-    "eslint": "eslint .",
-    "test": "mocha"
-  },
-  "main": "./anatta",
-  "engines": {
-    "node": ">=10"
-  },
-  "dependencies": {
-    "jsdom": "*",
-    "xmldom": "*",
-    "nwmatcher": "*",
-    "iconv-lite": "*",
-    "node-forge": "*",
-    "mongodb": "*"
-  },
-  "devDependencies": {
-    "eslint": "<4",
-    "mocha": "*"
-  },
-  "repository": {}
+    "name": "anatta-engine",
+    "version": "0.4.6",
+    "private": true,
+    "scripts": {
+        "eslint": "eslint .",
+        "test": "mocha"
+    },
+    "main": "./anatta",
+    "engines": {
+        "node": ">=10"
+    },
+    "dependencies": {
+        "jsdom": ">=12",
+        "xmldom": "*",
+        "nwmatcher": "*",
+        "iconv-lite": "*",
+        "node-forge": "*",
+        "mongodb": "*"
+    },
+    "devDependencies": {
+        "eslint": "<4",
+        "mocha": "*"
+    },
+    "repository": {}
 }
